# office365-email-transfer-script

./: README.md  config.cfg  email_transfer_script.py  messages_helpers.py  pyproject.toml  settings_helpers.py
